fix: badge should be visible on mobile too

--- a/ekke-webshop-frontend/src/app/components/header/header.component.scss
+++ b/ekke-webshop-frontend/src/app/components/header/header.component.scss
@@ -1,78 +1,92 @@
 .navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    height: 100px;
-    background-color: transparent;
-    padding: 0px 20px;
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 100px;
+  background-color: transparent;
+  padding: 0px 20px;
 }
 
 .logo-container {
-    width: 200px;
+  width: 200px;
 }
 
 .logo {
-    height: 80px;
+  height: 80px;
 }
 
 .trigger {
-    cursor: pointer;
+  cursor: pointer;
+}
+
+.notification {
+  position: absolute;
+  opacity: 0;
+  top: 80px;
+  right: 10px;
+  font-size: 12px;
+  transition: all 0.5s ease;
+
+  &.visible {
+    opacity: 1;
+  }
 }
 
 .item-group {
-    display: flex;
-    gap: 10px;
-    width: 200px;
+  display: flex;
+  gap: 10px;
+  width: 200px;
 }
 
 .icon-item {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 5px;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
 
-    .notification {
-        position: absolute;
-        opacity: 0;
-        top: 30px;
-        font-size: 12px;
-        transition: all 0.5s ease;
+  .notification {
+    position: absolute;
+    opacity: 0;
+    top: 30px;
+    font-size: 12px;
+    transition: all 0.5s ease;
 
-        &.visible {
-            opacity: 1;
-        }
+    &.visible {
+      opacity: 1;
     }
+  }
 }
 
 .item {
-    transition: all 0.5s ease;
-    border-bottom: 2px solid transparent;
+  transition: all 0.5s ease;
+  border-bottom: 2px solid transparent;
 
-    &:hover {
-        border-bottom: 2px solid white;
-    }
+  &:hover {
+    border-bottom: 2px solid white;
+  }
 }
 
 .desktop {
-    display: none;
+  display: none;
 }
 
 .mobile {
-    display: flex;
+  display: flex;
 }
 
 @media (min-width: 768px) {
-    .mobile {
-        display: none;
-    }
+  .mobile {
+    display: none;
+  }
 
-    .desktop {
-        display: flex;
-    }
+  .desktop {
+    display: flex;
+  }
 
-    .navbar {
-        padding: 0px 50px;
-    }
+  .navbar {
+    padding: 0px 50px;
+  }
 }
